# Graffiti

./: .git-blame-ignore-revs  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  Makefile  README.md
.github/workflows/: main.yml
Frontends/Visio/: GraffitiAddIn.Designer.xml  GraffitiAddIn.cs  GraffitiRibbon.Designer.cs  GraffitiRibbon.cs  Visio.csproj
Frontends/web/: index.html
Visio/: GraffitiAddIn.Designer.cs  GraffitiAddIn.cs  GraffitiRibbon.Designer.cs  GraffitiRibbon.cs  Settings.cs  Visio.csproj  Visio.sln  packages.config
Visio/Properties/: Resources.Designer.cs
Visio/code/: NetworkController.cs  NetworkPushes.cs  Node.cs  Themes.cs  VisioHelper.cs
backends/Clion/: build.gradle.kts  settings.gradle.kts
backends/clion/: build.gradle.kts
backends/ghidra/: .gitignore  README.md  build.gradle  extension.properties
backends/ida/: authentication.py  graffiti.py
backends/intellij/: build.gradle.kts  settings.gradle.kts
backends/jadx/: build.gradle.kts  gradle.properties  graffiti.jadx.kts
backends/jeb/: authentication.py  graffiti.py  graffitiSyncSymbols.py  graphMe.py  graphMeArrowDirection.py  graphMeLine.py  graphMeWithEdgeInfo.py  (+4 more)
docs/: presentation.md
intellij/: build.gradle.kts  settings.gradle.kts
jeb/: graphMe.py  graphMeWithEdgeInfo.py  graphMeXrefs.py  graphPull.py  graphUtils.py
server/: authenticator.py  dispatcher.py  main.py  network_handler.py  pyproject.toml  requirements.txt  vermin.ini
server/graffiti/: __init__.py  __main__.py  authenticator.py  dispatcher.py  main.py  network_handler.py
web/: frontend.js  index.html
(+157 files in other folders)
