[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graffiti_server"
version = "1.21.0"
authors = [{ name = "Yoav Sternberg", email = "yoav.sternberg@gmail.com" }]
description = "The MITM server for graffiti"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["websockets==10.3"]

[project.urls]
Homepage = "https://github.com/yoavst/Graffiti"
Issues = "https://github.com/yoavst/Graffiti/issues"

[project.scripts]
graffiti-server = "graffiti.__main__:main_cli"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
